--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
     <div class="edges" id="e4-6"></div>
     <div class="edges" id="e5-6"></div>
   </div>
+  <h2 id="feedback"></h2>
+  <script src="http://code.jquery.com/jquery-3.1.1.slim.min.js"
+  integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+  crossorigin="anonymous"></script>
+  <script src="main.js"></script>
 </body>
 </html>
